--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "mysql": "^2.18.1",
+    "mysql2": "^3.13.0",
     "nodemon": "^3.1.9"
   }
 }
